fix bug - width overflow

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -49,7 +49,7 @@
         // justify-content: space-around;
         &-nav {
           display: flex;
-          flex-basis: 100%;
+          flex-basis: 100vw;
            position: relative;
             // line-height: 100%;
             // flex-wrap: nowrap;
