--- a/sass/main.css
+++ b/sass/main.css
@@ -5,6 +5,7 @@ body {
   background-size: cover;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 html {
@@ -196,8 +197,8 @@ h6 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
+  -ms-flex-preferred-size: 100vw;
+      flex-basis: 100vw;
   position: relative;
   background: #333;
   -webkit-box-pack: space-evenly;
